--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,30 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+.pnp
+.pnp.js
+
+# Build outputs
 dist
 dist-ssr
+build
+.next
+out
 *.local
+
+# Environment variables
+.env
+.env*.local
+.env.development
+.env.production
+.env.test
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+!.vscode/settings.json
 .idea
 .DS_Store
 *.suo
@@ -22,3 +38,37 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# OS files
+Thumbs.db
+.DS_Store
+*.swp
+*~
+
+# Testing
+coverage
+.nyc_output
+*.lcov
+
+# Cache
+.cache
+.parcel-cache
+.eslintcache
+.stylelintcache
+.turbo
+
+# Temporary files
+*.tmp
+*.temp
+.temp
+temp
+
+package-lock.json
+
+# Debug
+.vscode/launch.json
+.vscode/tasks.json
+
+# Vercel/Deployment
+.vercel
+.netlify
