add: Menambahkan scramble text pada menu contact

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "embla-carousel-react": "^8.6.0",
     "face-api.js": "^0.22.2",
     "framer-motion": "^12.23.26",
+    "gsap": "^3.14.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.556.0",
     "motion": "^12.23.26",
