--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-router-dom": "^7.10.1",
     "recharts": "^3.5.1",
     "sonner": "^2.0.7",
+    "sweetalert2": "^11.26.17",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "tailwindcss-animate": "^1.0.7",
